[project]
name = "b123D-positioning"
version = "2.0.0"
description = "`build123d` ergonomic selector methods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build123d>=0.11.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "b123d_positioning.py"
]
